# math_fun

./: .clang-format  .gitignore  CMakeLists.txt  README.md  format
matchsticks/: README.md  find_angle.py  matchsticks.py  nearest_fraction.py  poly_solve.py
set_game_solver/: CMakeLists.txt  README.md  card.hpp  cards.cpp  cards.hpp  find_sets  find_sets.cpp  game.cpp  game.hpp  output.cpp  output.hpp  set
set_solver/: card.hpp  find_sets.cpp
